# smistress

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  run_dev.py
backend/alembic/: env.py
backend/alembic/versions/: 1e01e3ddf751_initial_schema.py  2c12f7878811_add_proof_and_task_timer.py  7dc33289eae6_add_memory_episode_outbox.py  a1b2c3d4e5f6_add_llm_availability.py  a7b8c9d0e1f2_add_task_discreetness.py  b2c3d4e5f6a7_add_batch_artifacts.py  b8c9d0e1f2a3_add_punishment_discreetness.py  c3d4e5f6a7b8_chastity_debt_punishment.py  c4d5e6f7a8b9_add_message.py  d4e5f6a7b8c9_add_punishment_pool.py  d5e6f7a8b9c0_add_message_action.py  e5f6a7b8c9d0_add_supervision_mode.py  f3a9c1b2d4e5_add_safety_state.py  f6a7b8c9d0e1_add_toy_discreetness.py
backend/app/: config.py  main.py
backend/app/agent/: README.md  heartbeat.py
backend/app/api/: availability.py  batch.py  chat.py  drones.py  economy.py  memory.py  onboarding.py  persona.py  profile.py  safety.py  supervision.py  tasks.py
backend/app/availability/: service.py
backend/app/batch/: prompt.py  service.py
backend/app/chat/: service.py  tools.py
backend/app/db/: enums.py  session.py
backend/app/discipline/: service.py
backend/app/drones/: service.py
backend/app/economy/: service.py
backend/app/llm/: factory.py  mock.py  openai_provider.py  provider.py  types.py
backend/app/loop/: service.py  verification.py
backend/app/memory/: graphiti_store.py  (+2 more)
backend/tests/: conftest.py  test_config.py  test_config_memory.py  test_db_health.py  test_main.py  test_schemas.py
(+248 files in other folders)
